--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
                 <div class="name huawei">Huawei</div>
                 <div class="name perri" >Perri</div>
                 <div class="name indie" >Indie</div>
+                <div class="name samsung">samsung</div>
                 <div class="band huawei" style="grid-row-start: 2;">La Papada de Milei</div>
                 <div class="band perri" style="grid-row-start: 3;">Nicolino Roche y los Pasteros Verde</div>
                 <div class="band indie" style="grid-row-start: 2;">Solista acústico y triste</div>
+                <div class="band samsung" style="grid-row-start: 3;">Iván y los Martinez</div>
                 <div class="band huawei" style="grid-row-start: 4;">Fonso y las paritarias</div>
                 <div class="band perri" style="grid-row-start: 5;">Violencia Rivas</div>
                 <div class="band indie" style="grid-row-start: 4;">Axel Kicilof</div>
+                <div class="band samsung" style="grid-row-start: 5;">Carlitos Kabbalah</div>
                 <div class="band huawei" style="grid-row-start: 6;">V8</div>
                 <div class="band perri" style="grid-row: 6 / 8;">Limón</div>
                 <div class="band indie" style="grid-row-start: 7;">Sumo</div>
+                <div class="band samsung" style="grid-row: 7/9;">Kosher Waters</div>
                 <div class="band huawei" style="grid-row-start: 8;">Juan Domingo Perón</div>
                 <div class="band perri" style="grid-row-start: 8;">Micky Vainilla</div>
                 <div class="band indie" style="grid-row-start: 8;">La Pepona</div>
