--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <div class="name huawei">Huawei</div>
                 <div class="name perri" >Perri</div>
                 <div class="name indie" >Indie</div>
+                <div class="name apple" >Apple</div>
                 <div class="band huawei" style="grid-row-start: 2;">La Papada de Milei</div>
                 <div class="band perri" style="grid-row-start: 3;">Nicolino Roche y los Pasteros Verde</div>
                 <div class="band indie" style="grid-row-start: 2;">Solista acústico y triste</div>
@@ -35,6 +36,10 @@
                 <div class="band huawei" style="grid-row-start: 8;">Juan Domingo Perón</div>
                 <div class="band perri" style="grid-row-start: 8;">Micky Vainilla</div>
                 <div class="band indie" style="grid-row-start: 8;">La Pepona</div>
+                <div class="band apple" style="grid-row-start: 3;">Iphone</div>
+                <div class="band apple" style="grid-row-start: 5;">Tropitango</div>
+                <div class="band apple" style="grid-row-start: 6;">Emma Ramos</div>
+                <div class="band apple" style="grid-row-start: 8;">Zutelman</div>
             </div>
         </div>
     </main>
